<resources>
    <string name="app_name">Wallapoor</string>
    <string name="type_an_email">Type an email</string>
    <string name="type_a_password">Type a password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="recover">Recover</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality</string>
    <string name="settings">Settings</string>
    <string name="type_an_username">Type an username</string>
    <string name="error_empty">This field cannot be empty</string>
    <string name="error_length">This field must be at least 5 characters</string>
    <string name="password_recovered">Password recovered</string>
    <string name="loading">Loading</string>
    <string name="shopping">Shopping</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="services">Services</string>
    <string name="sport_and_leisure">Sport and leisure</string>
    <string name="computer_and_electronic">Computer and electronic</string>
    <string name="home">Home</string>
    <string name="textile">Textile</string>
    <string name="engine_and_accessories">Engine and accessories</string>
    <string name="filters_by_category">Filters by category</string>
    <string name="filter_by_distance">Filter by distance</string>
    <string name="_50">50</string>
</resources>