<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginContent"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="64dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/icon_app"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_an_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_a_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/recoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:paddingBottom="64dp"/>
    </RelativeLayout>


</LinearLayout>