<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingHorizontal="64dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconImage"
            android:src="@drawable/icon_app"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_an_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iconImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_a_password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_an_username"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"/>

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registerButton"/>

        <ImageView
            android:id="@+id/hideButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_icon_up"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintHorizontal_bias="1.03"
            app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

        <TextView
            android:id="@+id/recoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="64dp"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Con include apilamos un archivo de layout en el FrameLayout que contendra los fragmentos -->

    <include
        android:id="@+id/viewLoading"
        layout="@layout/loading_view"
        android:visibility="invisible"/>
</FrameLayout>