<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:theme="@style/Theme.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:backgroundTint="@color/white"
            android:tint="@color/black"
            app:borderWidth="1dp"
            app:srcCompat="@drawable/ic_icon_checkmark"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/filter_by_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters_by_category"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/engine_and_accessories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_and_accessories"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_by_category"
            android:layout_marginTop="32dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/textile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textile"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/engine_and_accessories"
            android:layout_marginTop="16dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textile"
            android:layout_marginTop="16dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/computer_and_electronic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_and_electronic"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_marginTop="16dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/sport_and_leisure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_and_leisure"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/computer_and_electronic"
            android:layout_marginTop="16dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sport_and_leisure"
            android:layout_marginTop="16dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/computer_and_electronic"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp" />

        <Switch
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:id="@+id/engineSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/engine_and_accessories"
            app:layout_constraintBottom_toBottomOf="@+id/engine_and_accessories"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"/>

        <Switch
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:id="@+id/textileSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textile"
            app:layout_constraintBottom_toBottomOf="@+id/textile"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"/>

        <Switch
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:id="@+id/homeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/home"
            app:layout_constraintBottom_toBottomOf="@+id/home"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"/>

        <Switch
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:id="@+id/computerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/computer_and_electronic"
            app:layout_constraintBottom_toBottomOf="@+id/computer_and_electronic"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"/>

        <Switch
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:id="@+id/sportsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/sport_and_leisure"
            app:layout_constraintBottom_toBottomOf="@+id/sport_and_leisure"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"/>

        <Switch
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:id="@+id/servicesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/services"
            app:layout_constraintBottom_toBottomOf="@+id/services"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"/>

        <TextView
            android:id="@+id/filter_by_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_distance"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/services"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_by_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="32dp"
            tools:targetApi="p"
            tools:ignore="RtlHardcoded"/>

        <!--   <com.google.android.material.slider.Slider
            android:id="@+id/distanceSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
            android:valueFrom="10.0"
            android:valueTo="50.0"
            android:value="50.0"
            app:layout_constraintTop_toTopOf="@id/distanceLabel"
            app:layout_constraintBottom_toBottomOf="@+id/distanceLabel"
            app:layout_constraintLeft_toRightOf="@id/distanceLabel"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"/>   -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>